# molecule-descriptors-webtool

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
app/: __init__.py  app-orig.py  app.py  charger.py  descriptors.py  tanimoto.py  utils.py
app/static/css/: styles.css
app/static/scripts/: main.js
app/templates/: about.html  docs.html  feedback.html  index.html
data/: definition_prot_rules.csv  descriptor_synonyms.csv  descriptor_synonyms_empty.csv
scripts/: generate_synonyms.py
tests/: conftest.py  test_app.py
